fix chart rendering

--- a/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
+++ b/config/crd/bases/gateway.nginx.org_nginxproxies.yaml
@@ -74,12 +74,16 @@ spec:
                     description: DaemonSet is the configuration for the NGINX DaemonSet.
                     properties:
                       container:
-                        description: ContainerSpec defines container fields for the
-                          NGINX container.
+                        description: Container defines container fields for the NGINX
+                          container.
                         properties:
                           debug:
+                            description: Debug enables debugging for NGINX by using
+                              the nginx-debug binary.
                             type: boolean
                           hostPorts:
+                            description: HostPorts are the list of ports to expose
+                              on the host.
                             items:
                               description: HostPort exposes an nginx container port
                                 on the host.
@@ -359,8 +363,8 @@ spec:
                                 type: string
                             type: object
                           readinessProbe:
-                            description: ReadinessProbeSpec defines the configuration
-                              for the NGINX readiness probe.
+                            description: ReadinessProbe defines the readiness probe
+                              for the NGINX container.
                             properties:
                               exec:
                                 description: Exec specifies a command to execute in
@@ -523,8 +527,8 @@ spec:
                                 type: integer
                             type: object
                           resources:
-                            description: ResourceRequirements describes the compute
-                              resource requirements.
+                            description: Resources describes the compute resource
+                              requirements.
                             properties:
                               claims:
                                 description: |-
@@ -584,6 +588,8 @@ spec:
                                 type: object
                             type: object
                           volumeMounts:
+                            description: VolumeMounts describe the mounting of Volumes
+                              within a container.
                             items:
                               description: VolumeMount describes a mounting of a Volume
                                 within a container.
@@ -648,7 +654,7 @@ spec:
                             type: array
                         type: object
                       pod:
-                        description: PodSpec defines Pod-specific fields.
+                        description: Pod defines Pod-specific fields.
                         properties:
                           affinity:
                             description: Affinity is the pod's scheduling constraints.
@@ -3636,9 +3642,6 @@ spec:
                               type: object
                             type: array
                         type: object
-                    required:
-                    - container
-                    - pod
                     type: object
                   deployment:
                     description: |-
@@ -3646,12 +3649,16 @@ spec:
                       This is the default deployment option.
                     properties:
                       container:
-                        description: ContainerSpec defines container fields for the
-                          NGINX container.
+                        description: Container defines container fields for the NGINX
+                          container.
                         properties:
                           debug:
+                            description: Debug enables debugging for NGINX by using
+                              the nginx-debug binary.
                             type: boolean
                           hostPorts:
+                            description: HostPorts are the list of ports to expose
+                              on the host.
                             items:
                               description: HostPort exposes an nginx container port
                                 on the host.
@@ -3931,8 +3938,8 @@ spec:
                                 type: string
                             type: object
                           readinessProbe:
-                            description: ReadinessProbeSpec defines the configuration
-                              for the NGINX readiness probe.
+                            description: ReadinessProbe defines the readiness probe
+                              for the NGINX container.
                             properties:
                               exec:
                                 description: Exec specifies a command to execute in
@@ -4095,8 +4102,8 @@ spec:
                                 type: integer
                             type: object
                           resources:
-                            description: ResourceRequirements describes the compute
-                              resource requirements.
+                            description: Resources describes the compute resource
+                              requirements.
                             properties:
                               claims:
                                 description: |-
@@ -4156,6 +4163,8 @@ spec:
                                 type: object
                             type: object
                           volumeMounts:
+                            description: VolumeMounts describe the mounting of Volumes
+                              within a container.
                             items:
                               description: VolumeMount describes a mounting of a Volume
                                 within a container.
@@ -4220,7 +4229,7 @@ spec:
                             type: array
                         type: object
                       pod:
-                        description: PodSpec defines Pod-specific fields.
+                        description: Pod defines Pod-specific fields.
                         properties:
                           affinity:
                             description: Affinity is the pod's scheduling constraints.
@@ -7209,11 +7218,9 @@ spec:
                             type: array
                         type: object
                       replicas:
+                        description: Number of desired Pods.
                         format: int32
                         type: integer
-                    required:
-                    - container
-                    - pod
                     type: object
                   service:
                     description: Service is the configuration for the NGINX Service.
