--- a/deploy/azure/deploy.yaml
+++ b/deploy/azure/deploy.yaml
@@ -417,6 +417,7 @@ spec:
           pullPolicy: Always
           repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
           tag: edge
+        readinessProbe: {}
       pod:
         nodeSelector:
           kubernetes.io/os: linux
