--- a/deploy/experimental/deploy.yaml
+++ b/deploy/experimental/deploy.yaml
@@ -420,6 +420,7 @@ spec:
           pullPolicy: Always
           repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
           tag: edge
+        readinessProbe: {}
       replicas: 1
     service:
       externalTrafficPolicy: Local
