--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -26,6 +26,8 @@ spec:
         {{- end }}
         image:
           {{- toYaml .Values.nginx.image | nindent 10 }}
+        readinessProbe:
+          {{- toYaml .Values.nginx.readinessProbe | nindent 10 }}
         {{- if .Values.nginx.debug }}
         debug: {{ .Values.nginx.debug }}
         {{- end }}
@@ -49,7 +51,7 @@ spec:
         debug: {{ .Values.nginx.debug }}
         {{- end }}
         readinessProbe:
-          port: {{ .Values.nginx.readinessProbe.port | default 8081 }}
+          {{- toYaml .Values.nginx.readinessProbe | nindent 10 }}
     {{- end }}
     {{- if .Values.nginx.service }}
     service:
