--- a/deploy/experimental-nginx-plus/deploy.yaml
+++ b/deploy/experimental-nginx-plus/deploy.yaml
@@ -423,6 +423,7 @@ spec:
           pullPolicy: Always
           repository: private-registry.nginx.com/nginx-gateway-fabric/nginx-plus
           tag: edge
+        readinessProbe: {}
       replicas: 1
     service:
       externalTrafficPolicy: Local
