--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -441,6 +441,19 @@ nginx:
     # -- volumeMounts are the additional volume mounts for the NGINX container.
     volumeMounts: []
 
+    ## Defines the settings for the data plane readiness probe. This probe returns Ready when the NGINX data plane is ready to serve traffic.
+    readinessProbe: {}
+      # @schema
+      # type: integer
+      # minimum: 1
+      # maximum: 65535
+      # @schema
+      # -- Port in which the readiness endpoint is exposed.
+      # port: 8081
+
+      # -- The number of seconds after the Pod has started before the readiness probes are initiated.
+      # initialDelaySeconds: 3
+
   # -- The service configuration for the NGINX data plane. This is applied globally to all Gateways managed by this
   # instance of NGINX Gateway Fabric.
   service:
@@ -492,18 +505,6 @@ nginx:
     nodePorts: []
     # - port: 30025
     #   listenerPort: 80
-
-  ## Defines the settings for the data plane readiness probe. This probe returns Ready when the NGINX data plane is ready to serve traffic.
-  readinessProbe: {}
-    # @schema
-    # type: integer
-    # minimum: 1
-    # maximum: 65535
-    # @schema
-    # -- Port in which the readiness endpoint is exposed.
-    # port: 8081
-
-    # The Kubernetes probe can also be configured by modifying the NginxProxy resource.
 
   # -- Enable debugging for NGINX. Uses the nginx-debug binary. The NGINX error log level should be set to debug in the NginxProxy resource.
   debug: false
