--- a/deploy/crds.yaml
+++ b/deploy/crds.yaml
@@ -4760,18 +4760,24 @@ spec:
                           maxReplicas:
                             description: Maximum number of replicas.
                             format: int32
+                            minimum: 1
                             type: integer
                           minReplicas:
                             description: Minimum number of replicas.
                             format: int32
+                            minimum: 1
                             type: integer
                           targetCPUUtilizationPercentage:
                             description: Target cpu utilization percentage of HPA.
                             format: int32
+                            maximum: 100
+                            minimum: 1
                             type: integer
                           targetMemoryUtilizationPercentage:
                             description: Target memory utilization percentage of HPA.
                             format: int32
+                            maximum: 100
+                            minimum: 1
                             type: integer
                         required:
                         - enabled
@@ -4785,12 +4791,6 @@ spec:
                             && size(self.autoscalingTemplate) > 0))'
                         - message: minReplicas must be less than or equal to maxReplicas
                           rule: self.minReplicas <= self.maxReplicas
-                        - message: CPU utilization must be between 1 and 100
-                          rule: '!has(self.targetCPUUtilizationPercentage) || (self.targetCPUUtilizationPercentage
-                            >= 1 && self.targetCPUUtilizationPercentage <= 100)'
-                        - message: memory utilization must be between 1 and 100
-                          rule: '!has(self.targetMemoryUtilizationPercentage) || (self.targetMemoryUtilizationPercentage
-                            >= 1 && self.targetMemoryUtilizationPercentage <= 100)'
                       container:
                         description: Container defines container fields for the NGINX
                           container.
