Mostly fix lint issues

--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -212,18 +212,20 @@ nginx:
   # -- Is NGINX Plus image being used.
   plus: false
 
-  # Configuration for NGINX One Console.
+  # -- Configuration for NGINX One Console.
   nginxOneConsole:
     # Name of the secret which holds the dataplane key that is required to authenticate with the NGINX One Console.
+    # Secret must exist in the same namespace that the NGINX Gateway Fabric control plane is running in
+    # (default namespace: nginx-gateway).
     dataplaneKeySecretName: ""
 
-    # The Endpoint host that the NGINX One Console telemetry metrics will be sent to. 
-    endpointHost: "product.connect.nginx.com"
+    # -- The Endpoint host that the NGINX One Console telemetry metrics will be sent to.
+    endpointHost: "agent.connect.nginx.com"
 
-    # The endpoint port that the  NGINX One Console telemetry metrics will be sent to.
+    # -- The endpoint port that the NGINX One Console telemetry metrics will be sent to.
     endpointPort: 443
 
-    # NGINX One Console configuration specifying tls skip verify.
+    # -- Skip TLS verification for NGINX One Console connections.
     tlsSkipVerify: false
 
   # -- The name of the secret containing docker registry credentials.
