--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -214,7 +214,7 @@ nginx:
 
   # -- Configuration for NGINX One Console.
   nginxOneConsole:
-    # Name of the secret which holds the dataplane key that is required to authenticate with the NGINX One Console.
+    # -- Name of the secret which holds the dataplane key that is required to authenticate with the NGINX One Console.
     # Secret must exist in the same namespace that the NGINX Gateway Fabric control plane is running in
     # (default namespace: nginx-gateway).
     dataplaneKeySecretName: ""
@@ -231,7 +231,7 @@ nginx:
     endpointPort: 443
 
     # -- Skip TLS verification for NGINX One Console connections.
-    tlsSkipVerify: false
+    skipVerify: false
 
   # -- The name of the secret containing docker registry credentials.
   # Secret must exist in the same namespace as the helm release. The control
