--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -15,9 +15,9 @@ spec:
       {{- if .Values.nginx.replicas }}
       replicas: {{ .Values.nginx.replicas }}
       {{- end }}
-      {{- if .Values.nginx.autoscaling.enabled }}
+      {{- if .Values.nginx.autoscaling.enable }}
       autoscaling:
-        enabled: {{ .Values.nginx.autoscaling.enabled }}
+        enable: {{ .Values.nginx.autoscaling.enable }}
         {{- if .Values.nginx.autoscaling.minReplicas }}
         minReplicas: {{ .Values.nginx.autoscaling.minReplicas }}
         {{- end }}
