--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -179,16 +179,15 @@ nginxGateway:
       #   - type: Pods
       #     value: 2
       #     periodSeconds: 60
-    # Custom or additional autoscaling metrics
-    # autoscalingTemplate: []
-      # ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-custom-metrics
-      # - type: Pods
-      #   pods:
-      #     metric:
-      #       name: container_memory_usage_bytes
-      #     target:
-      #       type: AverageValue
-      #       averageValue: "400Mi"
+    # Custom or additional autoscaling metrics. https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-custom-metrics
+    # templates: []
+    # - type: Pods
+    #   pods:
+    #     metric:
+    #       name: container_memory_usage_bytes
+    #     target:
+    #       type: AverageValue
+    #       averageValue: "400Mi"
 
   metrics:
     # -- Enable exposing metrics in the Prometheus format.
@@ -251,16 +250,15 @@ nginx:
       #   - type: Pods
       #     value: 2
       #     periodSeconds: 60
-    # Custom or additional autoscaling metrics
-    # autoscalingTemplate: []
-      # ref: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-custom-metrics
-      # - type: Pods
-      #   pods:
-      #     metric:
-      #       name: nginx_gateway_fabric_nginx_process_requests_total
-      #     target:
-      #       type: nginx_http_requests_total
-      #       averageValue: 400
+    # Custom or additional autoscaling metrics. https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/#support-for-custom-metrics
+    # templates: []
+    # - type: Pods
+    #   pods:
+    #     metric:
+    #       name: nginx_gateway_fabric_nginx_process_requests_total
+    #     target:
+    #       type: AverageValue
+    #       averageValue: 400
   image:
     # -- The NGINX image to use.
     repository: ghcr.io/nginx/nginx-gateway-fabric/nginx
