Ensure gateway CRDs are installed when running `test-cel-validation`

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -18,6 +18,7 @@ EXPERIMENTAL_CONFORMANCE_PROFILES = GATEWAY-TLS
 CONFORMANCE_PROFILES = $(STANDARD_CONFORMANCE_PROFILES) # by default we use the standard conformance profiles. If experimental is enabled we override this and add the experimental profiles.
 SKIP_TESTS =
 CEL_TEST_TARGET =
+BRANCH = ?= main
 
 # Check if ENABLE_EXPERIMENTAL is true
 ifeq ($(ENABLE_EXPERIMENTAL),true)
@@ -172,7 +173,7 @@ HELM_PARAMETERS += --set nginxGateway.name=nginx-gateway --set nginx.service.typ
 # it overrides the target in the main Makefile when the GW_API_VERSION is set to main
 ifeq ($(GW_API_VERSION),main)
 install-gateway-crds:
-	kubectl kustomize "https://github.com/kubernetes-sigs/gateway-api/config/crd/$(if $(filter true,$(ENABLE_EXPERIMENTAL)),experimental,)?timeout=120&ref=main" | kubectl apply -f -
+	kubectl kustomize "https://github.com/kubernetes-sigs/gateway-api/config/crd/$(if $(filter true,$(ENABLE_EXPERIMENTAL)),experimental,)?timeout=120&ref=$(BRANCH)" | kubectl apply -f -
 endif
 
 .PHONY: install-ngf-local-no-build
@@ -191,6 +192,7 @@ uninstall-ngf: ## Uninstall NGF on configured kind cluster
 # Run CEL validation integration tests against a real cluster
 .PHONY: test-cel-validation
 test-cel-validation:
+	-make install-gateway-crds || true;
 	@if [ -z "$(CEL_TEST_TARGET)" ]; then \
 		echo "Running all tests in ./cel"; \
 		go test -v ./cel; \
